# observation-inventory-utils

./: .bumpversion.cfg  .env_example  .pre-commit-config.yaml  README.md  README.rd  environment.yaml  obs_inv_utils.sh  obs_inv_utils_discover.csh  obs_inv_utils_hera.sh  obs_inv_utils_pw_inv_cluster.sh  requirements.txt  setup.cfg  setup.py  tox.ini
inv_configs/: obs_meta_sinv_template.yaml
inv_configs/airs/: obs_inv_config__valid_s3_clean_airsev.yaml  obs_inv_config_nasa_aqua.yaml  obs_meta_sinv__valid_s3__airsev.yaml  obs_meta_sinv_nasa_aqua.yaml  run_airsev.sh
inv_configs/amsua/: obs_inv_config_nasa_aqua.yaml  obs_inv_config_nasa_r21c.yaml  obs_meta_sinv_nasa_aqua.yaml  obs_meta_sinv_nasa_r21c.yaml  run-1bamua.sh  run-nasa-aqua.sh  run-nasa-r21c.sh
inv_configs/amsub/: obs_inv_config_1bamub.yaml  obs_meta_sinv_1bamub.yaml  run_1bamub.sh
inv_configs/amv/: obs_inv_config_merged.yaml  obs_meta_sinv_merged.yaml  run-merged.sh
inv_configs/atms/: obs_inv_config_atms.yaml  obs_meta_sinv_atms.yaml  run_atms.sh
inv_configs/avhrr/: obs_inv_config_nasa_avcsam.yaml  obs_inv_config_nasa_avcspm.yaml  obs_meta_sinv_nasa_avcsam.yaml  obs_meta_sinv_nasa_avcspm.yaml  run-avcsam.sh  run-avcspm.sh
inv_configs/conv/: obs_inv_config_prepbufr.acft_profile.yaml  obs_inv_config_prepbufr.yaml  obs_meta_cmpbqm_prepbufr.acft_profile.yaml  obs_meta_cmpbqm_prepbufr.yaml  run-prepbufr.acft_profile.sh  run-prepbufr.sh
inv_configs/cris/: obs_inv_config_cris.yaml  obs_inv_config_crisf4.yaml  obs_meta_sinv_cris.yaml  obs_meta_sinv_crisf4.yaml  run_cris.sh  run_crisf4.sh
inv_configs/geo/: obs_inv_config_geoimr.yaml  obs_inv_config_goesfv.yaml  obs_inv_config_goesnd.yaml  obs_meta_sinv_geoimr.yaml  obs_meta_sinv_goesfv.yaml  obs_meta_sinv_goesnd.yaml  run-geoimr.sh  run-goesfv.sh  run-goesnd.sh
inv_configs/gmi/: obs_inv_config_nasa_gmiv7.yaml  obs_meta_sinv_nasa_gmiv7.yaml  run-nasa-gmiv7.sh
inv_configs/gps/: obs_inv_config_eumetsat.yaml  (+5 more)
(+138 files in other folders)
