[metadata]
name = obs-inv-utils
version = 0.0.2
description = Python utilities for NOAA observation files cataloging
long_description = file: README.md
long_description_content_type = text/markdown
author = NOAA-PSL
author_email = steve.lawrence@noaa.gov
keywords = NOAA, PSL
home_page = https://github.com/noaa-psd/observation-inventory-utils
license = GNU Lesser General Public License
classifiers =
    Development Status :: 1 - Beta
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    License :: OSI Approved :: GNU Lesser General Public License
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Software Development :: Libraries :: Python Modules
    Operating System :: OS Independent
    Typing :: Typed
project_urls =
    Bug Tracker = https://github.com/noaa-psl/observation-inventory-utils/issues
    CI = https://github.com/noaa-psl/observation-inventory-utils/actions

[build-system]
requires = ["setuptools", "wheel"]
#...

[options]
zip_safe = False
include_package_data = True
package_dir =
  =src
packages = find:
python_requires = >= 3.6
setup_requires =
  setuptools
install_requires =
  attrs
  click
  python-dotenv
  netcdf4
  numpy
  pandas
  pyyaml
  scipy

[options.entry_points]
console_scripts =
  obs-inv-utils = obs_inv_utils:cli

[options.extras_require]
dev = flake8; autopep8; pre-commit; pylint; pytest; tox;

[options.packages.find]
where=src

[options.package_data]
* = *.txt, *.md, *.yaml, *.png

[green]
file-pattern = test_*.py
verbose = 2
no-skip-report = true
quiet-stdout = true
run-coverage = true
